Project and Cv Update

--- a/index.html
+++ b/index.html
@@ -358,12 +358,13 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 250vh;
   background: radial-gradient(circle, #000000 80%, #1F2833 100%);
   color: #FFFFFF;
   font-family: 'Arial', sans-serif;
   text-align: center;
   margin-top: -40px;
+  padding-bottom: 40px;
 }
 
 .skills-container {
@@ -443,7 +444,6 @@ h2 {
   width: 80%;
   max-width: 800px;
   padding: 20px;
-  margin-top: 220px;
   background: radial-gradient(circle, #1F2833 0%, #000000 100%);
   border-radius: 15px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
@@ -456,7 +456,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 250vh;
+  height: 400vh;
   background: radial-gradient(circle, #000000 80%, #1F2833 100%);
   color: #FFFFFF;
   font-family: 'Arial', sans-serif;
@@ -465,7 +465,7 @@ h2 {
 }
 @media (max-width:768px){
   #projects{
-    height: 188vh;
+    height: 250vh;
   }
 }
 
@@ -665,15 +665,11 @@ h2 {
     <div class="about-container">
       <h1>About Me</h1>
       <h2>
-        Hello! I'm Celal, a 20-year-old computer engineering student at Karabük University. 
-        I have experience with technologies like HTML, CSS, JavaScript, SQL (Oracle APEX), 
-        and basic Python. Currently, I'm actively learning Node.js to improve my backend 
-        development skills, and I'm planning to start learning PostgreSQL next month 
-        to work with databases more effectively. While I've been introduced to PHP basics 
-        through university courses, my primary focus is on mastering Node.js for future projects. 
-        I've also developed automation projects using tools like Selenium and Appium. 
-        As a curious learner, I enjoy exploring diverse fields and continuously expanding 
-        my knowledge in software development.
+        Hello! I'm Celal, a 20-year-old Computer Engineering student at Karabük University.
+
+I have experience working with various technologies such as HTML, CSS, JavaScript, SQL (Oracle APEX), Python (Selenium), React Native, and Supabase. Currently, I'm focused on improving my backend skills using Node.js.
+
+In my most recent project, a DHY Tercih Simülasyonu tool, I aimed to solve a real-world problem by using React Native and Supabase for the mobile side, and JavaScript, HTML, CSS, and Supabase for the web version. Through such projects, I not only strengthen my technical skills but also continuously expand my knowledge in the field of software development.
       </h2>          
       <h2>I have several projects I plan to develop in the upcoming period and I'm working towards bringing them to life.</h2>
     </div>
@@ -685,7 +681,8 @@ h2 {
       <h1 id="h1skills">Skills</h1>
       <ul class="skills-list">
         <li><span>💻</span> HTML, CSS, JavaScript</li>
-        <li><span>🤝</span> Learing Node.js</li>
+        <li><span>📱</span> React Native</li>
+        <li><span>🤝</span> Node.js, Supabase</li>
         <li><span>📊</span> SQL (Oracle APEX)</li>
         <li><span>🐍</span> Basic Python, C</li>
         <li><span>🤖</span> Selenium, Appium</li>
@@ -700,6 +697,14 @@ h2 {
     <div class="projects-container">
       <h1 id="h1skills">Projects</h1>
       <ul class="projects-list">
+        <li>
+          <a href="https://www.linkedin.com/posts/celal-t%C3%BCrko%C4%9Flu-394678297_healthtech-webdev-javascript-activity-7324372670714691584-mOPu?utm_source=social_share_send&utm_medium=member_desktop_web&rcm=ACoAAEfS5yABA8rcHmMWDL_qJGcUOf1-Mk-23R8" target="_blank">
+            <div class="project-item">
+              <span class="project-title">Click to See DHY Simülasyonu Website Details </span> 
+              <video src="resim/dhy.mp4" class="projects-img" ></video>
+            </div>
+          </a>
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=MTlzkZynrUk&t=41s&ab_channel=SageYaz%C4%B1l%C4%B1m" target="_blank">
             <div class="project-item">
@@ -738,6 +743,14 @@ h2 {
             <video src="resim/vize.mp4" class="projects-img" ></video>
           </div>
         </li>
+        <li>
+          <a href="https://github.com/CelalTurkoglu/InstagramUnfollowers" target="_blank">
+            <div class="project-item">
+              <span class="project-title">Click to See Finding IG Unfollowers App</span> 
+              <video src="resim/Unfollowers.mov" class="projects-img" ></video>
+            </div>
+          </li>
+        </a>
         
       </ul>
     </div>
